--- a/src/component/ImageGallery/ImageGallary.css
+++ b/src/component/ImageGallery/ImageGallary.css
@@ -13,6 +13,20 @@
 }
 
 .flex-container > div {
+  width: 20%;
+  height: 100%;
   margin: 10px;
-  padding: 20px;
+  overflow: hidden;
+}
+
+.flex-container > div > img{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+  transition: all 0.6s
+}
+
+.flex-container > div > img:hover {
+  transform: scale(1.4);
 }
