--- a/src/component/ImageGallery/ImageGallary.css
+++ b/src/component/ImageGallery/ImageGallary.css
@@ -3,28 +3,30 @@
 }
 
 .flex-container {
-  display: flex;
-  flex-wrap:wrap;
+  display: grid;
+  align-items: stretch;
+  column-gap: 32px;
+  grid-template-columns: repeat(6, 1fr);
+  grid-template-rows: 400px 1fr repeat(3, 400px);
+  row-gap: 32px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  justify-content: center;
-  align-items: center;
 }
 
 .flex-container > div {
-  width: 20%;
-  height: 100%;
-  margin: 10px;
+  border-radius: 4px;
+  grid-column: span 2;
   overflow: hidden;
+  position: relative;
 }
 
 .flex-container > div > img{
   object-fit: cover;
   width: 100%;
   height: 100%;
-  cursor: pointer;
-  transition: all 0.6s
+  transition: transform 0.3s ease-in-out 0s;
+  backface-visibility: hidden;
 }
 
 .flex-container > div > img:hover {
