--- a/src/component/ImageGallery/ImageGallary.css
+++ b/src/component/ImageGallery/ImageGallary.css
@@ -6,8 +6,8 @@
   display: grid;
   align-items: stretch;
   column-gap: 32px;
-  grid-template-columns: repeat(6, 1fr);
-  grid-template-rows: 400px 1fr repeat(3, 400px);
+  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
   row-gap: 32px;
   width: 80%;
   margin-left: auto;
@@ -17,6 +17,7 @@
 .flex-container > div {
   border-radius: 4px;
   grid-column: span 2;
+  grid-row: span 4;
   overflow: hidden;
   position: relative;
 }
@@ -26,6 +27,7 @@
   width: 100%;
   height: 100%;
   transition: transform 0.3s ease-in-out 0s;
+  cursor: pointer;
   backface-visibility: hidden;
 }
 
