--- a/src/component/ImageGallery/ImageGallary.css
+++ b/src/component/ImageGallery/ImageGallary.css
@@ -5,19 +5,18 @@
 .flex-container {
   display: grid;
   align-items: stretch;
+  justify-items: center;
   column-gap: 32px;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-columns: repeat(12, 1fr);
+  grid-template-columns: repeat(auto-fill, 150px);
   row-gap: 32px;
   width: 80%;
+  justify-content:center;
   margin-left: auto;
   margin-right: auto;
 }
 
 .flex-container > div {
   border-radius: 4px;
-  grid-column: span 2;
-  grid-row: span 4;
   overflow: hidden;
   position: relative;
 }
