--- a/src/component/ImageGallery/ImageGallary.scss
+++ b/src/component/ImageGallery/ImageGallary.scss
@@ -4,26 +4,22 @@
 
 .flex-container {
   display: grid;
-  align-items: stretch;
   justify-items: center;
   column-gap: 32px;
   grid-template-columns: repeat(auto-fill, 150px);
   row-gap: 32px;
   width: 80%;
-  justify-content:center;
-  margin-left: auto;
-  margin-right: auto;
-  & div {
+  justify-content: center;
+  margin: 0 auto;
+  > div {
     border-radius: 4px;
     overflow: hidden;
-    position: relative;
-    & img {
+    > img {
       object-fit: cover;
       width: 100%;
       height: 100%;
       transition: transform 0.3s ease-in-out 0s;
       cursor: pointer;
-      backface-visibility: hidden;
       &:hover {
         transform: scale(1.4);
       }
