--- a/src/component/ImageGallery/ImageGallary.scss
+++ b/src/component/ImageGallery/ImageGallary.scss
@@ -1,5 +1,5 @@
 .heading {
-  text-align:center
+  text-align: center
 }
 
 .flex-container {
@@ -12,8 +12,19 @@
   justify-content: center;
   margin: 0 auto;
   > div {
-    border-radius: 4px;
+    border-radius: 40px;
     overflow: hidden;
+    background: linear-gradient(135deg,#e27aae, #6c6eda);
+    border: 6px transparent solid;
+    &:hover {
+      -webkit-transform: translateY(-10px);
+      -ms-transform: translateY(-10px);
+      transform: translateY(-10px);
+      -webkit-box-shadow: 0 0 6px rgb(14, 13, 13);
+      box-shadow: 0 0 60px #000;
+      -webkit-transition: all .5s ease-out;
+      transition: all .5s ease-out;
+    }
     > img {
       object-fit: cover;
       width: 100%;
@@ -22,6 +33,7 @@
       cursor: pointer;
       &:hover {
         transform: scale(1.4);
+        filter: grayscale(100%);
       }
     }
   }
