feat: css style added

--- a/src/component/ImageGallery/ImageGallary.scss
+++ b/src/component/ImageGallery/ImageGallary.scss
@@ -16,6 +16,7 @@
     overflow: hidden;
     background: linear-gradient(135deg,#e27aae, #6c6eda);
     border: 6px transparent solid;
+    height: 230px;
     &:hover {
       -webkit-transform: translateY(-10px);
       -ms-transform: translateY(-10px);
