--- a/src/component/ImageGallery/ImageGallary.scss
+++ b/src/component/ImageGallery/ImageGallary.scss
@@ -11,7 +11,7 @@
   width: 80%;
   justify-content: center;
   margin: 0 auto;
-  > div {
+  div {
     border-radius: 40px;
     overflow: hidden;
     background: linear-gradient(135deg,#e27aae, #6c6eda);
@@ -26,7 +26,7 @@
       -webkit-transition: all .5s ease-out;
       transition: all .5s ease-out;
     }
-    > img {
+    img {
       object-fit: cover;
       width: 100%;
       height: 100%;
